; ModuleID = '/home/carl/AnghaBench/libgit2/tests/checkout/extr_crlf.c_unlink_file.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/checkout/extr_crlf.c_unlink_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@.str = private unnamed_addr constant [5 x i8] c".git\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, %struct.TYPE_3__*)* @unlink_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @unlink_file(i8* %0, %struct.TYPE_3__* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %4, align 8
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i8* @git_path_basename(i32 %8)
  store i8* %9, i8** %5, align 8
  %10 = call i32 @cl_assert(i8* %9)
  %11 = load i8*, i8** %3, align 8
  %12 = call i32 @GIT_UNUSED(i8* %11)
  %13 = load i8*, i8** %5, align 8
  %14 = call i64 @strcmp(i8* %13, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %22

16:                                               ; preds = %2
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @p_unlink(i32 %19)
  %21 = call i32 @cl_must_pass(i32 %20)
  br label %22

22:                                               ; preds = %16, %2
  %23 = load i8*, i8** %5, align 8
  %24 = call i32 @git__free(i8* %23)
  ret i32 0
}

declare dso_local i32 @cl_assert(i8*) #1

declare dso_local i8* @git_path_basename(i32) #1

declare dso_local i32 @GIT_UNUSED(i8*) #1

declare dso_local i64 @strcmp(i8*, i8*) #1

declare dso_local i32 @cl_must_pass(i32) #1

declare dso_local i32 @p_unlink(i32) #1

declare dso_local i32 @git__free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
